--- a/CalPEATS.ConsoleSandbox/CalPEATS.ConsoleSandbox.csproj
+++ b/CalPEATS.ConsoleSandbox/CalPEATS.ConsoleSandbox.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\CalPEATS.EfCore.Sandbox\CalPEATS.EfCore.Sandbox.csproj" />
+    </ItemGroup>
+
 </Project>
