--- a/CalPEATS.EfCore.Sandbox/CalPEATS.EfCore.Sandbox.csproj
+++ b/CalPEATS.EfCore.Sandbox/CalPEATS.EfCore.Sandbox.csproj
@@ -25,4 +25,11 @@
       </Compile>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+      <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.8" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+      <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+    </ItemGroup>
+
 </Project>
